tests/reference/llvm-expr3-3036522.stderr
syntax error: Statement or Declaration expected inside program, found Expression
 --> tests/expr3.f90:1:1
  |
1 | 5
  | ^ 
